[darglint]
# https://github.com/terrencepreilly/darglint
strictness = long
docstring_style = numpydoc


[metadata]
name = python-template
version = 0.1.0
author = Erik Ingwersen
author_email = erik.ingwersen@br.ey.com
description = Repositório template para criação de projetos em Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ingwersen-erik/python-template
project_urls =
    Bug Tracker = https://github.com/ingwersen-erik/python-template/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7


[options.packages.find]
where = src
